Formulaire d'inscription - Login et Logout on été configurer - modification du mot de passe

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -7,7 +7,7 @@
 	<br>
 	{{dump(app.user)}}
 	<br>
-	- Modifier mon mot de passe
+	<a href="{{path('account_password')}}">Modifier mon mot de passe</a>
 	<br>
 	- Ajouter mes adresses
 	<br>
