--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -39,4 +39,12 @@
 	</div>
 </nav>
 
+{% for label, messages in app.flashes %}
+	<div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
+		{% for message in messages %}
+			<p>{{ message }}<br></p>
+		{% endfor %}
+		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	</div>
+{% endfor %}
 
