Formulaire de modification de mot de passe et configuration du nouveau mot de passe

--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -7,6 +7,14 @@
 	<a href="{{path('account')}}">Retourner à mon compte</a>
 	<br>
 	<hr>
-	FORMULAIRE
+	{{ form_start(form) }}
+	{{form_row(form.firstName)}}
+	{{form_row(form.lastName)}}
+	{{ form_row(form.email)}}
+	{{ form_row(form.oldPassword)}}
+	{{ form_row(form.newPassword)}}
+	{{form_row(form.confirmNewPassword)}}
+	{{ form_end(form) }}
+
 	<hr>
 {% endblock %}
