--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,8 @@
 
 		<link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
 		<link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
-		<link href="{{asset('assets/css/style.min.css')}}" rel="stylesheet"> {% block stylesheet %}{% endblock %}
+		<link href="{{asset('assets/css/style.min.css')}}" rel="stylesheet">
+		<link rel="stylesheet" href="{{asset('assets/css/style.css')}}"> {% block stylesheet %}{% endblock %}
 		</head>
 		<body>
 
@@ -81,7 +82,7 @@
 
 
 				<!-- Marketing messaging and featurettes
-																																																																																																																											  ================================================== -->
+																																																																																																																															  ================================================== -->
 				<!-- Wrap the rest of the page in another container to center all the content. -->
 
 				<div class="container marketing"> {% block content %}{% endblock %}
