Création des controller Category, Product,

--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -9,7 +9,7 @@
 	{{form_row(form.lastName)}}
 	{{form_row(form.email)}}
 	{{form_row(form.password)}}
-	{{form_row(form.password_confirm)}}
+	{{form_row(form.confirmPassword)}}
 	{{form_row(form.submit)}}
 	{{form_end(form)}}
 
