--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -7,7 +7,7 @@
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav me-auto mb-2 mb-md-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Nos produits</a>
+					<a class="nav-link active" aria-current="page" href="/nos-produits">Nos produits</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="#">Qui sommes-nous ?</a>
