--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -1,21 +1,43 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nos Produits - Ma Boutique 
+{% block title %}Nos Produits - Ma Boutique
 {% endblock %}
 
-{% block content %} 
-    <h1>Nos Produits</h1>
-    <div class="row"> 
-        {% for product in products %} 
-            <div class="col-md-4 mt-3"> 
-            <img src="/uploads/{{product.illustration}}" alt="{{product.name}}" class="img-fluid"> 
-            <div class="product-item text-center"> 
-            <h5 style="font-weight:bold">{{product.name}}</h5> 
-            <div>{{product.subtitle}}</div> 
-            <div style="font-weight:bold">{{(product.price /100) | number_format(2)}} €</div> 
-            <div>Catégorie: {{product.category.name}}</div> 
-            </div> 
-            </div> 
-        {% endfor %} 
+{% block content %}
+	<h1>Nos Produits</h1>
+	<div class="row">
+		{% for product in products %}
+			<div class="col-md-4 mt-3">
+				<img src="/uploads/{{product.illustration}}" alt="{{product.name}}" class="img-fluid">
+				<div class="product-item text-center">
+					<h5 style="font-weight:bold">{{product.name}}</h5>
+					<div>{{product.subtitle}}</div>
+					<div style="font-weight:bold">{{(product.price /100) | number_format(2)}}
+						€</div>
+					<div>Catégorie:
+						{{product.category.name}}</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3">
+					LES FILTRES
+				</div>
+				<div class="col-md-9">
+					LES PRODUITS
+				</div>
+			</div>
+
+            
+		{% endfor %}
+	</div>
+    {{ form_start(form) }}
+    {{ form_end(form)}}
+    {% if error %} 
+    <div class="alert alert-danger" role="alert">
+     <hr> 
+     <h4 class="alert-heading">{{error}}</h4>
+    <hr> 
     </div>
+    {% endif %}
 {% endblock %}
+
