--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#">Tomoki</a>
+		<a class="navbar-brand" href="{{ path('home')}}">Tomoki</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav me-auto mb-2 mb-md-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="/nos-produits">Nos produits</a>
+					<a class="nav-link active" aria-current="page" href="{{ path('products') }}">Nos produits</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="#">Qui sommes-nous ?</a>
