--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
 		<meta name="generator" content="Hugo 0.118.2">
 		<meta name="description" content="{% block meta_description %}{% endblock %}">
 		<title>
-			{% block title %}Welcome
+			{% block title %}Bienvenue
 			{% endblock %}
 		</title>
 
@@ -83,7 +83,7 @@
 
 
 			<!-- Marketing messaging and featurettes
-																																																																																																																																					  ================================================== -->
+																																																																																																																																								  ================================================== -->
 			<!-- Wrap the rest of the page in another container to center all the content. -->
 
 			<div class="container marketing"> {% block content %}{% endblock %}
