--- a/templates/account/address_add.html.twig
+++ b/templates/account/address_add.html.twig
@@ -1,9 +1,45 @@
 {% extends 'base.html.twig' %}
-{% block title %}Ajouter une adresse - Ma boutique
+{% block title %}Ajouter une adresse - Tomoki
 {% endblock %}
 {% block content %}
-	<a href="{{path('account_address_add')}}" class="btn btn-primary btn-sm float-end ">Ajouter une adresse</a>
+	<h1>Gérer mes adresses</h1>
 	<a href="{{path('account')}}">Retour</a>
 	<hr>
-	FORMULAIRE
+
+	{{form_start(form)}}
+	<div class="row">
+		<div class="col-md12">
+			{{form_row(form.name)}}
+		</div>
+		<div class="col-md-6">
+			{{form_row(form.firstName)}}
+		</div>
+		<div class="col-md-6">
+			{{form_row(form.lastName)}}
+		</div>
+		<div class="col-md-6">
+			{{form_row(form.company)}}
+		</div>
+		<div class="col-md-6">
+			{{form_row(form.address)}}
+		</div>
+		<div class="col-md-6">
+			{{form_row(form.postal)}}
+		</div>
+		<div class="col-md-6">
+			{{form_row(form.city)}}
+		</div>
+		<div class="col-md-6">
+			{{form_row(form.country)}}
+		</div>
+		<div class="col-md-6">
+			{{form_row(form.phone)}}
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-12">
+			{{form_row(form.submit)}}
+		</div>
+	</div>
+	{{form_end(form)}}
 {% endblock %}
