--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}Modifier mon mot de passe - Ma boutique
+{% block title %}Modifier mon mot de passe - Tomoki
 {% endblock %}
 {% block content %}
 	<h1>Modifier mon mot de passe</h1>
