--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}
 	{{product.name}}
-	- Ma Boutique
+	- Tomoki
 {% endblock %}
 {% block content %}
 	<div class="row">
