--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -40,7 +40,8 @@
 				<!-- Ajoutez la ligne suivante -->
 				<li class="nav-item active">
 					<a class="nav-link" href="{{path('cart')}}">
-						<i class="fas fa-cart-arrow-down"></i>
+					Panier
+						<i class="fas fa-shopping-cart"></i>
 					</a>
 				</li>
 			</ul>
