--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,20 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello OrderController!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/laragon/www/tomoki/src/Controller/OrderController.php</code></li>
-        <li>Your template at <code>C:/laragon/www/tomoki/templates/order/index.html.twig</code></li>
-    </ul>
-</div>
+{% block title %}Valider ma commande - Tomoki !
 {% endblock %}
+
+{% block content %}
+	<h2>Je passe ma commande</h2>
+	<p>Choisissez vos préférences avant de passer votre commande</p>
+	<hr>
+	<div class="row">
+		<div class="col-md-6">
+			<b>{% set formHTML %}
+				{{form_start(form)}}{{form_end(form)}}
+				{% endset %}
+				{{ formHTML|replace({'[br]': '<br>'})|raw }}</b><br>
+			<b>Choisir mon transporteur</b>
+		</div>
+		<div class="col-md-6">
+			<b>Recap de ma commande</b><br>
+			<b>bouton pour payer</b>
+		</div>
+	</div>
+{% endblock %}
+
