--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -17,7 +17,7 @@
 				{% for product in products %}
 					<div class="col-md-4 mb-4">
 						<div class="card">
-							<a href="{{ path('products', {'slug': product.slug}) }}">
+							<a href="{{ path('product', {'slug': product.slug}) }}">
 								<img src="/uploads/{{ product.illustration }}" alt="{{ product.name }}" class="card-img-top">
 							</a>
 							<div class="card-body text-center">
@@ -35,9 +35,14 @@
 										<hr>
 									</div>
 								{% endif %}
+								<button type="button" class="btn btn-success">
+
+									<a href="{{ path('product', {'slug': product.slug}) }}" class="btn btn-success">Détails</a>
+
+								</button>
 								<button type="button" class="btn btn-primary">
 
-									<a href="{{ path('add_to_cart', {'id': product.id}) }}" class="btn btn-primary">Ajouter au panier</a>
+									<a href="{{ path('add_to_cart', {'id': product.id}) }}" class="btn btn-primary">Ajouter au panier <i class="fas fa-cart-plus"></i></a>
 
 								</button>
 							</div>
