--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -8,17 +8,28 @@
 	<p>Choisissez vos préférences avant de passer votre commande</p>
 	<hr>
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-8 text-center">
 			<b>{% set formHTML %}
 				{{form_start(form)}}{{form_end(form)}}
 				{% endset %}
 				{{ formHTML|replace({'[br]': '<br>'})|raw }}</b><br>
-			<b>Choisir mon transporteur</b>
 		</div>
-		<div class="col-md-6">
-			<b>Recap de ma commande</b><br>
+		<div class="col-md-4">
+			<b>Recap de ma commande</b>
+			{% for product in cart %}
+				<div class="row mt-3">
+					<h3></h3><br>
+					<div class="col-2">
+						<img src="/uploads/{{product.product.illustration}}" alt="{{product.product.name}}" class="img-fluid">
+					</div>
+					<div class="col-4">
+						{{product.product.name}}<br>
+						<i>{{product.product.subtitle}}</i>
+					</div>
+					<div class="col-2 my-auto">{{product.quantity}}</div>
+				</div>
+			{% endfor %}
 			<b>bouton pour payer</b>
 		</div>
 	</div>
 {% endblock %}
-
