Ajustement du formulaire d'addresse et controle de sécurité, Crud Mise en place des facture automatique

--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Mes Adresses - Tomoki
 {% endblock %}
 {% block content %}
-	<a href="{{path('account_address_add')}}" class="p-2 m-3 btn btn-primary btn-md float-end ">Gérer mes adresses</a>
+	<a href="{{path('account_address_add')}}" class="p-2 m-3 btn btn-primary btn-md float-end ">Ajoutez une nouvelle addresse</a>
 
 	<h1>Mes adresses</h1>
 	<p>Dans cet espace , vous pouvez gérer toutes vos adresses</p>
