--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -10,9 +10,10 @@
 	<div class="row">
 		<div class="col-md-6">
 			<b>{% set formHTML %}
-				{{form_start(form)}}{{form_end(form)}}
+				{{form_start(form)}}
+				{{form_end(form)}}
 				{% endset %}
-				{{ formHTML|replace({'[br]': '<br>'})|raw }}</b><br>
+				{{ formHTML|replace({'[br]': '<br>'}) |raw }}</b><br>
 		</div>
 		<div class="col-md-6">
 			<b>Recap de ma commande</b>
