--- a/templates/order/recap.html.twig
+++ b/templates/order/recap.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}Paiement de ma commande - Tomoki!
+{% block title %}Paiement de ma commande - Ma Boutique!
 {% endblock %}
 {% block content %}
 	<h2>Recapitulatif de ma Commande</h2>
@@ -12,9 +12,10 @@
 			<strong>Mon transporteur</strong><br>
 			{{order.carrier.name}}<br>
 			{{order.carrier.description}}<br>
-			{{ (order.carrier.price / 100) | number_format(2)}}
-			€
+			{{ (order.carrier.price / 100) | number_format(2)}}€
+
 		</div>
+
 		<div class="col-md-6">
 			<div class="text-center">Recapitulatif de ma commande</div>
 			{% set total = null %}
@@ -22,7 +23,7 @@
 				{% set total= total + product.product.price * product.quantity %}
 				<div class="row mt-3">
 					<div class="col-2">
-						<img src="/uploads/{{product.product.illustration}}" alt="{{product.product.name}}" class="img-fluid">
+						<img src="{{product.product.illustration}}" alt="{{product.product.name}}" class="img-fluid">
 					</div>
 					<div class="col-8">
 						{{product.product.name}}<br>
@@ -31,26 +32,18 @@
 						{{product.quantity}}
 					</div>
 					<div class="col-2 my-auto">
-						{{product.product.price * product.quantity /100 | number_format(2)}}
-						€
+						{{product.product.price * product.quantity /100 | number_format(2)}}€
 					</div>
+
 				</div>
 			{% endfor %}
 			<hr>
-			<strong>Sous Total :
-				{{total/100 | number_format(2) }}
-				€<br>
-			</strong>
-			<strong>Livraison :
-				{{ (order.carrier.price / 100) | number_format(2) }}
-				€
-			</strong>
+			<strong>Sous Total :{{total/100 | number_format(2) }}€<br></strong>
+			<strong>Livraison :{{ (order.carrier.price / 100) | number_format(2) }}€</strong>
 			<hr>
-			<strong>Total :
-				{{ (total/100 + order.carrier.price / 100) | number_format(2) }}
-				€</strong>
-			<a href="" class="btn btn-success col-12 mt-3">Payer
-				{{(total/100 + order.carrier.price / 100) | number_format(2) }}
+			<strong>Total :{{ (total/100 + order.carrier.price / 100) | number_format(2) }}€</strong>
+			<a href="{{stripe_checkout_session}}" class="btn btn-success col-12 mt-3">Payer
+				{{total/100 + carrier.price | number_format(2) }}
 				€</a>
 		</div>
 	</div>
