--- a/templates/order_cancel/index.html.twig
+++ b/templates/order_cancel/index.html.twig
@@ -1,15 +1,41 @@
 {% extends 'base.html.twig' %}
-{% block title %}Erreur de paiement - My boutique
+
+{% block title %}
+    Erreur de paiement - Tomoki
 {% endblock %}
+
 {% block content %}
-	<h2>Erreur de paiement</h2>
-	<p>Bonjour
-		{{order.user.firstName}}
-		{{order.user.lastName}}<br><br>
-		Il semblerait que votre paiement ait échoué pour la commande n°:
-		{{order.reference}}<br><br>Une Confirmation d'erreur vient d'être envoyé à l'adresse email:
-		{{order.user.email}}<br>
-	</p>
-	<hr>
-	<a href="{{path('order')}}" class="btn btn-success">Réessayer le paiement</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <div class="card border-0 shadow">
+                    <div class="card-body">
+                        <h2 class="card-title">
+                            Erreur de paiement
+                        </h2>
+                        <p class="card-text">
+                            Bonjour
+                            {{ order.user.firstName }}
+                            {{ order.user.lastName }}
+                            ,
+                        </p>
+                        <p class="card-text">
+                            Il semblerait que votre paiement ait échoué pour la commande n°
+                            {{ order.reference }}
+                            .
+                        </p>
+                        <p class="card-text">
+                            Une confirmation d'erreur vient d'être envoyée à l'adresse email :
+                            {{ order.user.email }}
+                            .
+                        </p>
+                        <hr>
+                        <a href="{{ path('order') }}" class="btn btn-success">
+                            Réessayer le paiement
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
